# PoET

./: .dockerignore  .gitignore  Dockerfile  README.md  poet.py  property  pyproject.toml  requierments.txt   requirements-dev.txt  requirements.txt  trace.json  trace1.json  trace2.json
.github/workflows/: docker-tests.yml  python-tests.yml
core/: event_processor.py  max_state_tracker.py  poet_monitor.py  sliding_window_graph.py  state_manager.py  vector_clock_manager.py
examples/1/: generate trace.py  property  result-spec-1  run_experiments.sh  trace
examples/1/experiment_result/: result-spec-1
examples/1/output/: graph_1  graph_10  graph_2  graph_3  graph_4  graph_5  graph_6  graph_7  graph_8  graph_9
examples/1/traces/: trace-100.json  trace-1000.json  trace-50.json  trace-500.json  trace.json
examples/2/: generate trace.py  property  run_experiments.sh
examples/2/experiment_result/: result-spec-2
examples/2/traces/: trace-100.json  trace-1000.json  trace-50.json  trace-500.json  trace.json
examples/3/: generate trace.py  result-spec-3  run_experiments.sh
examples/3/experiment_result/: result-spec-2  result-spec-3
examples/3/traces/: trace  trace-1000.json  trace-50.json
examples/4/: generate trace.py  property  run_experiments.sh
examples/4/experiment_result/: result-spec-4
examples/4/traces/: trace-100.json  trace-50.json  trace-500.json  trace.json
experiments/experiment_1/: property  run_experiments_1.sh
experiments/experiment_1/traces/: trace-10k.json  trace-1k.json
experiments/experiment_2/: result-experiment-2  result-experiment-2-old  run_experiments_2.sh
experiments/experiment_2/traces/: trace-10k.json
experiments/experiment_3/: property  result-experiment-3  run_experiments_3.sh
experiments/experiment_3/traces/: trace-10k.json  trace-1k.json
experiments/experiment_4/: property  result-experiment-4  result-experiment-4-old  run_experiments_4.sh
experiments/experiment_4/traces/: trace-10k.json  trace-1k.json
experiments/experiment_5/: generate trace.py  result-experiment-5  run_experiments_5.sh
experiments/experiment_5/traces/: trace-100.json  trace-1000.json  trace-50.json  trace-500.json
experiments/experiment_6/: generate trace.py  result-experiment-6  run_experiments_6.sh
experiments/experiment_6/traces/: trace-100.json  trace-1000.json  trace-50.json  trace-500.json
experiments/experiment_7/: generate trace.py  property.pctl  result-experiment-7  run_experiments_7.sh
experiments/experiment_7/traces/: trace-100.json  trace-100.json.no_vc  trace-1000.json  trace-50.json  trace-500.json  trace-500.json.no_vc
experiments/experiment_8/: generate trace.py  result-experiment-8  run_experiments_8.sh
experiments/experiment_8/traces/: trace-100.json  trace-1000.json  trace-1000.json.no_vc  trace-50.json  trace-500.json
graphics/: automaton.py  prints.py
model/: base_entity.py  event.py  process.py  process_modes.py  state.py
parser/: ast.py  parser.py  parsetab.py
tests/: test_ast.py  test_event.py  test_parser.py  test_poet_scenario.py  test_process.py  test_state.py  test_vector_clock.py
tests/core_tests/: test_event.py  test_process.py  test_sliding_window_graph.py  test_state.py  test_vector_clock.py
tests/integration_tests/: test_poet_scenario.py
tests/parser_tests/: test_ast.py  test_parser.py
utils/: config.py  generic_utils.py  logger.py  vector_clock_fixer.py
